Prevent horrible scrolling/resizing on iOS
Get around the behavior on iOS where vh units refer to the "full" height
of a page which is only the height after scrolling has occurred. Now the
whole scroll-resizing is gone on iOS because the site is fixed to the
shorter page height. Not ideal but might be the best we can do?

All vh units are now replaced with percentages

--- a/src/main.sass
+++ b/src/main.sass
@@ -10,7 +10,11 @@
 
 #app,
 body
+  width: 100vw
+  height: 100%
   overflow: hidden
+  margin: 0
+  padding: 0
 
 .page
   position: absolute
@@ -18,7 +22,7 @@ body
   top: 0
   left: 0
   width: 100vw
-  height: 100vh
+  height: 100%
 
 .nav-buttons
   position: absolute
