--- a/src/pages/contact/style.sass
+++ b/src/pages/contact/style.sass
@@ -8,7 +8,7 @@
 
 .form
   position: absolute
-  top: 50vh
+  top: 50%
   left: 50vw
   transform: translate(-50%, -50%)
   width: 55vw
