--- a/src/pages/routeTransitions.sass
+++ b/src/pages/routeTransitions.sass
@@ -6,7 +6,7 @@
 
 // Slide everything downwards to transition (move up one section)
 .slide-downwards-enter
-  transform: translateY(-100vh)
+  transform: translateY(-100%)
 
 .slide-downwards-enter-to
   transform: translateY(0)
@@ -15,11 +15,11 @@
   transform: translateY(0)
 
 .slide-downwards-leave-to
-  transform: translateY(100vh)
+  transform: translateY(100%)
 
 // Slide everything upwards to transition (move down one section)
 .slide-upwards-enter
-  transform: translateY(100vh)
+  transform: translateY(100%)
 
 .slide-upwards-enter-to
   transform: none
@@ -28,7 +28,7 @@
   transform: none
 
 .slide-upwards-leave-to
-  transform: translateY(-100vh)
+  transform: translateY(-100%)
 
 // Fancy scaling period animation
 
