--- a/src/pages/shop/style.sass
+++ b/src/pages/shop/style.sass
@@ -18,7 +18,7 @@ h1.bg-title
   user-select: none
 
   position: absolute
-  top: 50vh
+  top: 50%
   left: 50vw
   margin: 0
   transform: translate(-50%, -50%)
